force-app/main/default/objects/Course__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag stating whether the course is completed or not</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>