force-app/main/default/objects/Course__c/validationRules/AttendeesCountRule.validationRule-meta.xml
<ValidationRule>
    <fullName>AttendeesCountRule</fullName>
    <active>true</active>
    <errorConditionFormula>Attendees_Count__c  &gt;  Attendees_Quota__c</errorConditionFormula>
    <errorMessage>Attendees quota is at its limit !!</errorMessage>
</ValidationRule>