force-app/main/default/objects/Course__c/validationRules/Credit_Limitation.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Limitation</fullName>
    <active>true</active>
    <errorConditionFormula>Credit__c &lt;= 0   ||   Credit__c &gt;  100</errorConditionFormula>
    <errorMessage>Credit must be 1-100</errorMessage>
</ValidationRule>