force-app/main/default/objects/Course__c/validationRules/Start_Date_Rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Rule_1</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c   &gt;   End_Date__c</errorConditionFormula>
    <errorMessage>The Start Date must be before the End Date</errorMessage>
</ValidationRule>