force-app/main/default/objects/Course__c/validationRules/Start_Date_Rule_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Rule_2</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c   &lt;  TODAY() &amp;&amp;  ISNEW()</errorConditionFormula>
    <errorMessage>The Start Date cannot be in the past, therefore, I can only create courses with a date of
today or further in the future</errorMessage>
</ValidationRule>