force-app/main/default/objects/Course__c/listViews/All_active_courses_Started.listView-meta.xml
<ListView>
    <fullName>All_active_courses_Started</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All active courses ( Started )</label>
    <sharedTo>
        <role>Student</role>
        <role>Tutor</role>
    </sharedTo>
</ListView>