force-app/main/default/objects/Course__c/listViews/All_past_courses_Finished.listView-meta.xml
<ListView>
    <fullName>All_past_courses_Finished</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All past courses ( Finished )</label>
    <sharedTo>
        <role>Student</role>
        <role>Tutor</role>
    </sharedTo>
</ListView>