force-app/main/default/objects/Course__c/listViews/All_pending_courses_Not_yet_started.listView-meta.xml
<ListView>
    <fullName>All_pending_courses_Not_yet_started</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All pending courses ( Not yet started )</label>
    <sharedTo>
        <role>Student</role>
        <role>Tutor</role>
    </sharedTo>
</ListView>